<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    app:bbn_badgeColor="@color/colorRed"
    app:bbn_itemColorActive="@color/colorPrimary"
    app:bbn_itemColorDisabled="@color/colorGray"
    app:bbn_itemColorInactive="@color/colorGray"
    app:bbn_rippleColor="@color/colorPrimary">
    <item
        android:id="@+id/action_home"
        android:icon="@mipmap/ic_home"
        android:title="@string/bottom_navigation_home"/>
    <item
        android:id="@+id/action_message"
        android:icon="@mipmap/ic_message"
        android:title="@string/bottom_navigation_message"/>
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/bottom_navigation_search"/>
    <item
        android:id="@+id/action_user"
        android:icon="@mipmap/ic_profile"
        android:title="@string/bottom_navigation_profile"/>
</menu>