<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                app:layout_collapseParallaxMultiplier="0.7"
                >
                <ImageView
                    android:id="@+id/image_profile_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    />
                <LinearLayout
                    android:id="@+id/layout_user_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"

                    >
                    <TextView
                        android:id="@+id/text_user_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="?attr/actionBarSize"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_font_size_normal"
                        tools:text="男 江苏 无锡"
                        />
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image_avatar"
                        android:layout_width="@dimen/profile_avatar_size"
                        android:layout_height="@dimen/profile_avatar_size"
                        android:layout_margin="@dimen/margin_than_small"
                        android:src="@mipmap/ic_launcher"
                        />

                    <LinearLayout
                        android:id="@+id/view_dm_follow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:layout_marginRight="@dimen/margin_medium"
                        android:orientation="horizontal"
                        >
                        <Button
                            android:id="@+id/button_dm"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacer_medium"
                            android:layout_weight="1"
                            android:background="@drawable/radius_btn_shape"
                            android:text="@string/btn_text_dm"
                            android:textColor="@android:color/white"
                            />
                        <Space
                            android:layout_width="@dimen/margin_medium"
                            android:layout_height="wrap_content"
                            />
                        <Button
                            android:id="@+id/button_follow"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacer_medium"
                            android:layout_weight="1"
                            android:background="@drawable/radius_btn_shape"
                            android:text="@string/btn_text_unfollowing"
                            android:textColor="@android:color/white"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:layout_marginTop="@dimen/margin_small"
                        android:orientation="horizontal"
                        >
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:id="@+id/text_status_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_num_zero"
                                android:textColor="@android:color/white"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_status"
                                android:textColor="@android:color/white"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/layout_following"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:id="@+id/text_following_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_num_zero"
                                android:textColor="@android:color/white"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_following"
                                android:textColor="@android:color/white"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/layout_follower"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:id="@+id/text_follower_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_num_zero"
                                android:textColor="@android:color/white"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_follower"
                                android:textColor="@android:color/white"
                                />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:background="@android:color/transparent"
                android:textColorSecondary="@android:color/white"
                app:layout_collapseMode="pin"
                app:titleTextColor="@android:color/white"
                style="@style/ToolbarStyles"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
        <include layout="@layout/include_tablayout"/>
    </android.support.design.widget.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>